--- a/calendarIndex.html
+++ b/calendarIndex.html
@@ -26,9 +26,9 @@ function day (a,b,c,d,e,f) {
   this.busy0=d;
   this.busy1=e;
   this.busy2=f;
-  this.pic0="images/avatar2.png";
-  this.pic1="images/avatar6.png";
-  this.pic2="images/avatar3.png";
+  this.pic0="avatar2.png";
+  this.pic1="avatar6.png";
+  this.pic2="avatar3.png";
   this.price0=250;
   this.price1=150;
   this.price2=550;
